--- a/src/index.html
+++ b/src/index.html
@@ -304,7 +304,7 @@
             <button class="chara" onclick="setCurrentChara('{{0}}'); changeDiv(this, 'main', 'options');">
                 <div>
                     <div class="chara-icon">
-                        <img src="icons/chara_2_{{0}}_00.png" width="30" height="30">
+                        <img src="./img/bntx/chara_2_{{0}}_00.png" width="30" height="30">
                     </div>
                     <p class="translate-name">{{0}}</p>
                 </div>
